GNOME Bugzilla – Bug 757947
adaptivedemux: http src errors are no longer detected
Last modified: 2015-11-16 04:30:13 UTC
Since uri handler element was moved to a bin element inside adaptive demux (commit ccff3be3ab2e5bffcefc12c80a5edb225801f1b9) the error messages emitted by the uri handler are not properly handled by adaptivedemux.
Created attachment 315265 [details] [review] proposed patch
Comment on attachment 315265 [details] [review] proposed patch You could check instead with gst_object_has_as_ancestor() if the source of the message is inside the bin. That would be more reliable and also catch errors from e.g. queue2.
Created attachment 315287 [details] [review] proposed patch using gst_object_has_as_ancestor
commit 4994f068d55945ef0c1cf9fc4c349551563b8522 Author: Florin Apostol <florin.apostol@oregan.net> Date: Wed Nov 11 16:51:23 2015 +0000 adaptivedemux: fixed handling errors emitted by uri handler https://bugzilla.gnome.org/show_bug.cgi?id=757947